--- a/src/Presentation/Nop.Web/App_Data/Localization/defaultResources.nopres.xml
+++ b/src/Presentation/Nop.Web/App_Data/Localization/defaultResources.nopres.xml
@@ -195,8 +195,8 @@
   <LocaleResource Name="Account.CustomerProductReviews.ApprovalStatus.Approved">
     <Value>Approved</Value>
   </LocaleResource>
-  <LocaleResource Name="Account.CustomerProductReviews.ApprovalStatus.NotApproved">
-    <Value>Not approved</Value>
+  <LocaleResource Name="Account.CustomerProductReviews.ApprovalStatus.Pending">
+    <Value>Pending</Value>
   </LocaleResource>
   <LocaleResource Name="Account.CustomerProductReviews.ProductReviewFor">
     <Value>Product review for</Value>
@@ -4975,16 +4975,16 @@
     <Value>Enable show reviews per store.</Value>
   </LocaleResource>
   <LocaleResource Name="Admin.Configuration.Settings.Catalog.ShowProductReviewsTabOnAccountPage">
-    <Value>Show product reviews tab on ''Account page''</Value>
+    <Value>Show product reviews tab on ''My account'' page</Value>
   </LocaleResource>
   <LocaleResource Name="Admin.Configuration.Settings.Catalog.ShowProductReviewsTabOnAccountPage.Hint">
-    <Value>Check to show product reviews tab on ''Account page''.</Value>
+    <Value>Check to show product reviews tab on '' My account'' page.</Value>
   </LocaleResource>
   <LocaleResource Name="Admin.Configuration.Settings.Catalog.ProductReviewsPageSizeOnAccountPage">
-    <Value>Numbers of product reviews to display on ''Account page''</Value>
+    <Value>Product reviews page size</Value>
   </LocaleResource>
   <LocaleResource Name="Admin.Configuration.Settings.Catalog.ProductReviewsPageSizeOnAccountPage.Hint">
-    <Value>This numbers of product reviews to display on ''Account page''.</Value>
+    <Value>Set the page size for product reviews e.g. ''10'' reviews per page.</Value>
   </LocaleResource>
   <LocaleResource Name="Admin.Configuration.Settings.Catalog.ShowShareButton">
     <Value>Show a share button</Value>
@@ -13403,6 +13403,9 @@
   </LocaleResource>
   <LocaleResource Name="PageTitle.ContactVendor">
     <Value>Contact Vendor - {0}</Value>
+  </LocaleResource>
+  <LocaleResource Name="PageTitle.CustomerProductReviews">
+    <Value>My product reviews</Value>
   </LocaleResource>
   <LocaleResource Name="PageTitle.ForumSubscriptions">
     <Value>Forum Subscriptions</Value>
